refactor(events): make GameEvent an interface instead of a class